--- a/arch/arm/boot/dts/qcom/15801/msm8996-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/15801/msm8996-mtp.dtsi
@@ -2188,3 +2188,14 @@
 &pmi8994_switch {
 	qcom,current = <507>;
 };
+
+&firmware {
+	android {
+		fstab {
+			/delete-node/ vendor;
+			system {
+				dev = "/dev/block/platform/soc/624000.ufshc/by-name/system";
+			};
+		};
+	};
+};
